--- a/docs/11_technical_risks.adoc
+++ b/docs/11_technical_risks.adoc
@@ -2,19 +2,24 @@
 == Riesgos y deudas técnicas
 
 .Falta de conocimiento de React
-Es la primera vez que trabajamos con este framework, por lo que no tenemos ni idea de como funciona. 
-Sí que es cierto que la documentación es muy buena y tiene una gran cantidad de ejemplos, por lo que podemos aprender bastante en poco tiempo.
+Es la primera vez que trabajamos con este framework. Aunque hemos aprendido bastante durante la implementación del sitio web sí que es verdad que en muchas ocasiones nos hemos visto con problemas para realizar alguna funcionalidad debido a falta de conocimiento en aspectos como puede ser la sintaxis del lenguaje. 
+Sí que es cierto que la documentación es muy buena y tiene una gran cantidad de ejemplos, ayudándonos con el desarrollo.
+
+.Falta de conocimiento de Node.js
+Nos pasa lo mismo que con React. Hemos tenido que ir aprendiendo el lenguaje a medida que ibamos desarrollando la aplicación.
+También tiene un documentación exhaustiva al ser un framework muy utilizado en el mundo del desarrollo web.
 
 .Tiempo
-Estamos limitados a una fecha para entregar el proyecto, por lo que debemos optimizar el trabajo lo máximo posible.
+Estamos limitados a una fecha para entregar el proyecto, por lo que debemos optimizar el trabajo lo máximo posible, algo que hará que aparezca más deuda técnica que si tuvieramos el tiempo que quisiéramos para perfeccionar todo lo necesario.
 
 .Equipos
-No tenemos mucha experiencia trabajando en equipo, y en ocasiones no es fácil coordinarse. Haremos reuniones cada poco tiempo con el fin de poner
-nuestro trabajo al día y avanzar uniformemente.
+No tenemos mucha experiencia trabajando en equipo, y en ocasiones no es fácil coordinarse. Haremos reuniones cada poco tiempo con el fin de poner nuestro trabajo al día y avanzar uniformemente.
 
-.Desconocimiento de SOLID
-SOLID es una nueva tecnología y su documentación es muy escasa. No tiene muchos ejemplos por lo que deberemos informarnos por cuenta propia por cualquier medio posible
-acerca de esa tecnología.
+.Despliegue
+Nos han surgido muchos problemas con el despliegue, no hemos sido capaces de realizarlo en la plataforma AWS y de momento estamos en progreso para hacerlo en Heroku. Es una operación de la que no teníamos conocimiento inicialmente y esto nos ha llevado a tener que investigar y solventar una gran cantidad de inconvenientes.
+
+.Desconococimiento de PODs de SOLID
+Tecnología desconocida con muy poca documentación y ejemplos.
 
 
 
@@ -22,16 +27,19 @@ acerca de esa tecnología.
 |===
 |Riesgo|Explicación|Solución
 | _Falta de conocimiento de React_ | _Es la primera vez que trabajamos con este framework, así no tenemos experiencia con él._ | _La documentación de React es muy buena y cuenta con una gran cantidad de ejemplos y facilidades, por lo que aprenderemos a desenvolvernos rápido._
+| _Falta de conocimiento de Node.js | _Es la primera vez que trabajamos con este framework, así no tenemos experiencia con él._ | _La documentación es muy buena y cuenta con una gran cantidad de ejemplos y facilidades, por lo que aprenderemos a desenvolvernos rápido._
 | _Tiempo_ | _Estamos condicionados por una fecha de entrega_ | _Debemos optimizar tanto el trabajo individual como colectivo lo máximo posible_
-| Desconocimiento de SOLID | _Es una tecnología muy nueva, su documentación es muy escasa y se han reportado varios bugs_ | _Intentaremos informarnos de cualquier manera posible
-sobre esta tecnología, ya que tampoco tiene muchos ejemplos_
+| Desconococimiento de PODs de SOLID | _Es una tecnología muy nueva, su documentación es muy escasa y se han reportado varios bugs_ | _Intentaremos informarnos de cualquier manera posible sobre esta tecnología, ya que tampoco tiene muchos ejemplos_
+| Despliegue | _Problemas en todas las plataformas en las que intentamos realizarlo_ | _Nos informamos a través de diversas fuentes así como con la ayuda de los profesores para realizar la misma._
 |===
 
 [options="header",cols="1,2"]
 |===
 |Deuda técnica|Explicación
-| _Errores del POD_| _Esta nueva tecnología puede ocasionar errores repentinos o algunos bugs._ 
-| _Errores de conexión_ | _Puede ocurrir que la conexión a la red sea muy débil y que en consecuencia la aplicación trabaje más lento_ 
+| _Internacionalización_| _Aspecto que ha quedado sin realizar debido a falta de tiempo. Nos habría gustado realizarlo_ 
+| _Errores de conexión_ | _Puede ocurrir que la conexión a la red sea muy débil y que en consecuencia la aplicación trabaje más lento_
+|_Usabilidad_|_Operaciones como pasar validadores o probar la aplicación con usuarios reales antes de la presentación no han sido realizadas también debido al tiempo_ 
+|Despliegue|_Todavía no hemos logrado desplegar exitosamente la aplicación_ 
 |===
 
 
